creation of class Rule and first distributed execution of makefile